force-app/main/default/objects/Credit_Order__c/Credit_Order__c.object-meta.xml
<CustomObject>
    <label>Credit Order</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Credit Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>