force-app/main/default/objects/Credit_Order__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Orders (Billing Account)</relationshipLabel>
    <relationshipName>Credit_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>