force-app/main/default/objects/Credit_Order__c/fields/Billing_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Deposit__c</fullName>
    <label>Billing Deposit %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deposit_Terms</valueSetName>
    </valueSet>
</CustomField>