force-app/main/default/objects/Credit_Order__c/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Orders</relationshipLabel>
    <relationshipName>Credit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>