force-app/main/default/objects/Credit_Order__c/fields/Billing_Terms_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Terms_Name__c</fullName>
    <label>Billing Terms Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>