force-app/main/default/objects/Credit_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Orders (Contact)</relationshipLabel>
    <relationshipName>Credit_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>