force-app/main/default/objects/Credit_Order__c/fields/Credit_Order_Format__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Order Format</label>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Credit Orders</relationshipLabel>
    <relationshipName>Credit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>