force-app/main/default/objects/Credit_Order__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Credit Orders</relationshipLabel>
    <relationshipName>Credit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>