force-app/main/default/objects/Credit_Order__c/fields/Manufacturer_Rep__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Orders (Manufacturer Rep)</relationshipLabel>
    <relationshipName>Credit_Order_ManRep</relationshipName>
    <type>Lookup</type>
</CustomField>