force-app/main/default/objects/Credit_Order__c/fields/Referral_Rep__c.field-meta.xml
<CustomField>
    <fullName>Referral_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>