force-app/main/default/objects/Credit_Order__c/fields/Sales_Rep_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep / Team</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Credit Orders</relationshipLabel>
    <relationshipName>Credit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>