force-app/main/default/objects/Credit_Order__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Orders (Shipping Account)</relationshipLabel>
    <relationshipName>Credit_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>