force-app/main/default/objects/Credit_Order__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Orders (Shipping Name)</relationshipLabel>
    <relationshipName>Credit_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>