force-app/main/default/objects/Credit_Order__c/fields/Shipping_Term__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Term__c</fullName>
    <label>Shipping Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Term</valueSetName>
    </valueSet>
</CustomField>