force-app/main/default/objects/Credit_Order__c/fields/Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_Instruction__c</fullName>
    <label>Special Instruction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>