force-app/main/default/objects/Credit_Order__c/fields/Specified_Rep__c.field-meta.xml
<CustomField>
    <fullName>Specified_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specified Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Orders (Specified Rep)</relationshipLabel>
    <relationshipName>Credit_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>