force-app/main/default/objects/Credit_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Credit_Order_Line__c.Total__c</summarizedField>
    <summaryForeignKey>Credit_Order_Line__c.Credit_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>