force-app/main/default/objects/Credit_Order__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>Credit_Order_Line__c.Quantity_Ordered__c</summarizedField>
    <summaryForeignKey>Credit_Order_Line__c.Credit_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>