force-app/main/default/objects/Credit_Order__c/fields/Total_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipped__c</fullName>
    <label>Total Shipped</label>
    <summarizedField>Credit_Order_Line__c.Shipped_Quantity__c</summarizedField>
    <summaryForeignKey>Credit_Order_Line__c.Credit_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>