force-app/main/default/objects/Credit_Order__c/validationRules/Can_Not_Receive_Because_Not_Shipped.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Receive_Because_Not_Shipped</fullName>
    <active>false</active>
    <description>Stage can not be changed to Receive because not all items has been shipped</description>
    <errorConditionFormula>IF(
AND(ISCHANGED(Stage__c),
ISPICKVAL(Stage__c, &apos;Received&apos;),
Total_Quantity__c &lt;&gt; Total_Shipped__c), True, False)</errorConditionFormula>
    <errorMessage>Sales Order cannot be Received, all items have not been shipped.</errorMessage>
</ValidationRule>