force-app/main/default/objects/Credit_Order__c/validationRules/Sales_Order_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Order_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Sales_Order__c)</errorConditionFormula>
    <errorMessage>Sales Order is required field.</errorMessage>
</ValidationRule>